--- a/scss/02_layouts/_l-main.scss
+++ b/scss/02_layouts/_l-main.scss
@@ -411,6 +411,7 @@
   & .l-S02 {
     position: relative;
     background-color: $messageBgColor;
+    overflow: hidden;
     &::before {
       content: "SLashNext";
       @include font-size(188);
