--- a/css/style.css
+++ b/css/style.css
@@ -341,12 +341,8 @@ Layout
 /*
   common
 ----------------------------------------------- */
-.container {
-  background-color: #fff;
-}
-
 .contents {
-  margin-bottom: 900px;
+  background-color: #fff;
 }
 
 .s-about .l-L01,
@@ -801,16 +797,16 @@ Layout
 /*
   l-footer
 ----------------------------------------------- */
-.footer .l-S01 {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  height: 900px;
+.footer.sitefooter {
+  position: sticky;
+  left: 0px;
+  bottom: 0px;
+  height: 1200px;
   background-color: #242422;
-  z-index: -100;
+  z-index: -1;
 }
 .footer .l-S03 {
-  padding: 104px 0;
+  padding: 376px 0 104px 0;
   height: auto;
 }
 .footer .l-L02 {
@@ -889,6 +885,15 @@ Layout
   padding: 24px 0;
 }
 
+@media screen and (max-height: 850px) {
+  .footer.sitefooter {
+    position: static;
+    height: auto;
+  }
+  .footer .l-S03 {
+    padding: 104px 0;
+  }
+}
 /* ===============================================
 Module
 =============================================== */
@@ -935,7 +940,7 @@ hamburger
   b-hamburger
 ----------------------------------------------- */
 .l-global-nav {
-  position: fixed;
+  position: static;
   top: 56px;
   left: 0;
   right: 0;
@@ -950,18 +955,6 @@ hamburger
   transition: transform 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out; /* IE9非対応 */
   -webkit-transform: translateX(-150%); /* Android, BrackberrXtranslateX  */ /* IE9 */
   transform: translateX(-150%);
-}
-.l-global-nav::before {
-  content: "";
-  position: absolute;
-  top: -8px;
-  left: 0;
-  width: 100%;
-  height: 10px;
-  background-image: url(../../img/common/background_beigeLine.svg);
-  background-repeat: repeat-x;
-  background-size: cover;
-  background-position: bottom;
 }
 
 .is-active-drawer .l-global-nav {
