--- a/scss/04_blocks/_b-hamburger.scss
+++ b/scss/04_blocks/_b-hamburger.scss
@@ -6,7 +6,7 @@ hamburger
   b-hamburger
 ----------------------------------------------- */
 .l-global-nav {
-  position: fixed;
+  position: static;
   top: 56px;
   left: 0;
   right: 0;
@@ -19,18 +19,6 @@ hamburger
   -webkit-transform: translateX(-150%); /* Android, BrackberrXtranslateX  */
   -ms-transform: translateX(-150%); /* IE9 */
   transform: translateX(-150%);
-  &::before {
-    content: "";
-    position: absolute;
-    top: -8px;
-    left: 0;
-    width: 100%;
-    height: 10px;
-    background-image: url(../../img/common/background_beigeLine.svg);
-    background-repeat: repeat-x;
-    background-size: cover;
-    background-position: bottom;
-  }
 }
 
 .is-active-drawer .l-global-nav {
