creatorのボックスの中身作成 背景アイコン設置

--- a/scss/01_foundation/variable/_color.scss
+++ b/scss/01_foundation/variable/_color.scss
@@ -11,6 +11,8 @@ $yellowColor: #ffdf33;
 
 $differenceBgColor: #edf2f9;
 $messageBgColor: #edf2f5;
+$SLashCardColor_01: #08234c;
+$SLashCardColor_02: #eef2f9;
 $grayColor: #f3f4f4;
 $aboutGuidanceLineColor: #efefef;
 $footerCompanyLineColor: #d9d9d9;
