--- a/scss/04_blocks/_b-hamburger.scss
+++ b/scss/04_blocks/_b-hamburger.scss
@@ -6,7 +6,7 @@ hamburger
   b-hamburger
 ----------------------------------------------- */
 .l-global-nav {
-  position: static;
+  position: fixed;
   top: 56px;
   left: 0;
   right: 0;
