--- a/css/style.css
+++ b/css/style.css
@@ -524,13 +524,24 @@ Layout
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  gap: 104px 64px;
+  gap: 22px 64px;
 }
 .s-service .l-L09 .b-serviceContents__advantage {
   width: calc((100% - 64px) / 2);
 }
 .s-service .l-L09 .b-serviceContents__advantageResult {
   width: 100%;
+}
+.s-service .l-L09 .b-serviceContents__advantageIcon {
+  width: 100%;
+  text-align: center;
+}
+.s-service .l-L09 .b-serviceContents__advantageIcon .b-image {
+  width: 50px;
+  -webkit-transform: rotate(20deg);
+          transform: rotate(20deg);
+  padding-bottom: 4px;
+  margin-right: 14px;
 }
 .s-service .l-L12 .b-serviceContents__support {
   width: 100%;
@@ -940,7 +951,7 @@ hamburger
   b-hamburger
 ----------------------------------------------- */
 .l-global-nav {
-  position: static;
+  position: fixed;
   top: 56px;
   left: 0;
   right: 0;
@@ -1315,9 +1326,11 @@ Block
 
 .b-creatorCranks__boxName--jp {
   font-size: 0.5625rem;
+  line-height: 0.8;
 }
 .b-creatorCranks__boxName--en {
   font-size: 0.375rem;
+  line-height: 1;
 }
 .b-creatorCranks__boxStatus {
   font-size: 0.4375rem;
@@ -1831,7 +1844,6 @@ Block
 }
 .b-serviceContents__advantageResult {
   padding: 32px 40px;
-  position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1847,21 +1859,6 @@ Block
           justify-content: center;
   gap: 0 24px;
 }
-.b-serviceContents__advantageResult::before {
-  content: "";
-  position: absolute;
-  top: -84px;
-  left: 0;
-  right: 0;
-  margin: 0 auto;
-  width: 56px;
-  height: 56px;
-  background-image: url(../../img/hero_04.svg);
-  background-repeat: no-repeat;
-  background-size: contain;
-  -webkit-transform: rotate(21deg);
-          transform: rotate(21deg);
-}
 .b-serviceContents__advantageWrapper {
   padding-left: 144px;
   display: -webkit-box;
@@ -1871,7 +1868,7 @@ Block
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  gap: 16px 0;
+  gap: 12px 0;
 }
 .b-serviceContents__support {
   padding: 32px 64px;
@@ -1934,7 +1931,9 @@ Block
 .b-serviceContents__lowPrice .b-serviceContents__boxTitle {
   padding-bottom: 32px;
 }
-.b-serviceContents__lowPrice .b-serviceContents__boxIcon.com {
+.b-serviceContents__lowPrice .b-serviceContents__boxIcon.communication {
+  width: 385px;
+  margin: 0 auto;
   padding-bottom: 48px;
 }
 
@@ -2073,6 +2072,112 @@ Block
   background-color: #7070d1;
 }
 
+.b-creatorSLash {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 32px;
+}
+.b-creatorSLash__boxLogo {
+  width: 240px;
+  padding-bottom: 24px;
+}
+.b-creatorSLash__cardBox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 0 32px;
+}
+.b-creatorSLash__cardItem {
+  padding: 24px;
+  border-radius: 8px;
+}
+.b-creatorSLash__cardItem.blue {
+  background-color: #08234c;
+}
+.b-creatorSLash__cardItem.gray {
+  background-color: #eef2f9;
+  color: #242422;
+}
+.b-creatorSLash__boxTitle {
+  position: relative;
+  padding-top: 104px;
+}
+.b-creatorSLash__boxTitle::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  width: 96px;
+  height: 104px;
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+.b-creatorSLash__boxTitle.blue::before {
+  background-image: url(../../img/creator_slash_02.png);
+}
+.b-creatorSLash__boxTitle.gray::before {
+  background-image: url(../../img/creator_slash_03.png);
+}
+.b-creatorSLash__boxTitle span::before, .b-creatorSLash__boxTitle span::after {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border-style: solid;
+  border-width: 0;
+}
+.b-creatorSLash__boxTitle span::before {
+  content: "- ";
+}
+.b-creatorSLash__boxTitle span::after {
+  content: " -";
+}
+
+.b-creatorCranks {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #242422;
+  padding: 32px 64px;
+}
+.b-creatorCranks__boxLogo {
+  width: 318px;
+  padding-bottom: 24px;
+}
+.b-creatorCranks__cardBox {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  gap: 0 64px;
+}
+.b-creatorCranks__boxImage {
+  padding-bottom: 8px;
+}
+.b-creatorCranks__boxName--jp {
+  padding-bottom: 8px;
+}
+
 /*
   FAQ
 ----------------------------------------------- */
@@ -2094,7 +2199,7 @@ Block
   font-size: 1.125rem;
   line-height: 1;
   text-align: center;
-  top: 12px;
+  top: 9px;
   left: -35px;
   width: 18px;
   height: 18px;
@@ -2113,3 +2218,128 @@ Block
 /*
   message
 ----------------------------------------------- */
+/*
+  about
+----------------------------------------------- */
+.s-about .l-L04 {
+  z-index: 2;
+}
+.s-about .l-L06 {
+  position: relative;
+  z-index: 0;
+}
+.s-about .l-L06::before {
+  content: "";
+  position: absolute;
+  top: -74px;
+  right: -122px;
+  width: 742px;
+  height: 742px;
+  background-image: url(../../img/background_01.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  z-index: -1;
+}
+
+/*
+  service
+----------------------------------------------- */
+.s-service .l-L04, .s-service .l-L08, .s-service .l-L12, .s-service .l-L15 {
+  z-index: 2;
+}
+.s-service .l-L07, .s-service .l-L10, .s-service .l-L13 {
+  position: relative;
+  z-index: 0;
+}
+.s-service .l-L07::before, .s-service .l-L10::before, .s-service .l-L13::before {
+  content: "";
+  position: absolute;
+  width: 930px;
+  height: 930px;
+  background-image: url(../../img/background_02.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  z-index: -2;
+}
+.s-service .l-L07::before {
+  top: -164px;
+  right: -220px;
+  -webkit-transform: rotate(-26deg);
+          transform: rotate(-26deg);
+}
+.s-service .l-L10::before {
+  top: -2px;
+  left: -400px;
+  -webkit-transform: rotate(14deg);
+          transform: rotate(14deg);
+}
+.s-service .l-L13::before {
+  top: -60px;
+  right: -245px;
+  -webkit-transform: rotate(-5deg);
+          transform: rotate(-5deg);
+}
+
+/*
+  reason
+----------------------------------------------- */
+.s-reason .l-L04 {
+  z-index: 2;
+}
+.s-reason .l-L07 {
+  position: relative;
+  z-index: 0;
+}
+.s-reason .l-L07::before {
+  content: "";
+  position: absolute;
+  width: 700px;
+  height: 700px;
+  background-image: url(../../img/background_03.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  z-index: -2;
+}
+.s-reason .l-L07:first-child::before {
+  top: -20px;
+  left: -170px;
+  -webkit-transform: rotate(-19deg);
+          transform: rotate(-19deg);
+}
+.s-reason .l-L07:nth-of-type(2)::before {
+  top: -2px;
+  right: -185px;
+  -webkit-transform: rotate(-19deg);
+          transform: rotate(-19deg);
+}
+.s-reason .l-L07:last-child::before {
+  top: 118px;
+  left: -164px;
+  -webkit-transform: rotate(11deg);
+          transform: rotate(11deg);
+}
+
+/*
+  flow
+----------------------------------------------- */
+.s-flow .l-L04 {
+  z-index: 2;
+}
+.s-flow .l-L01 {
+  position: relative;
+  z-index: 0;
+}
+.s-flow .l-L01::before {
+  content: "";
+  position: absolute;
+  top: 130px;
+  left: -210px;
+  width: 755px;
+  height: 755px;
+  -webkit-transform: rotate(-11deg);
+          transform: rotate(-11deg);
+  background-image: url(../../img/background_04.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  z-index: -2;
+}
