--- a/scss/02_layouts/_l-main.scss
+++ b/scss/02_layouts/_l-main.scss
@@ -24,6 +24,95 @@
 /*
   hero
 ----------------------------------------------- */
+
+/*アニメーションの開始から終了までを指定する*/
+@keyframes anime_parts01 {
+  0% {
+    transform: translate(0px, 0px);
+  }
+
+  30% {
+    transform: translate(20px, -40px);
+  }
+
+  60% {
+    transform: translate(40px, 20px);
+  }
+
+  100% {
+    transform: translate(0px, 0px);
+  }
+}
+@keyframes anime_parts02 {
+  0% {
+    transform: translate(0px, 0px);
+  }
+
+  50% {
+    transform: translateY(20px);
+  }
+
+  100% {
+    transform: translate(0px, 0px);
+  }
+}
+@keyframes anime_parts03 {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  50% {
+    transform: rotate(30deg);
+  }
+
+  100% {
+    transform: rotate(0deg);
+  }
+}
+@keyframes anime_parts04 {
+  0% {
+    transform: translate(0px, 0px) rotate(0deg);
+  }
+
+  50% {
+    transform: translate(-80px, -30px) rotate(20deg);
+  }
+
+  100% {
+    transform: translate(0px, 0px) rotate(0deg);
+  }
+}
+@keyframes anime_parts05 {
+  0% {
+    transform: translate(0px, 0px) rotate(0);
+  }
+
+  30% {
+    transform: translate(30px, 20px) rotate(10deg);
+  }
+
+  60% {
+    transform: translate(20px, -20px) rotate(20deg);
+  }
+
+  100% {
+    transform: translate(0px, 0px) rotate(0);
+  }
+}
+@keyframes anime_parts06 {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  50% {
+    transform: rotate(30deg);
+  }
+
+  100% {
+    transform: rotate(0deg);
+  }
+}
+
 .s-hero {
   &.l-S01 {
     height: 100vh;
@@ -60,18 +149,21 @@
         left: -10%;
         bottom: -358px;
         left: -145px;
+        animation: anime_parts01 20s linear 1s infinite;
       }
       &__parts02 {
         top: -7%;
         left: -6%;
         top: -56px;
         left: -84px;
+        animation: anime_parts02 12s linear infinite;
       }
       &__parts03 {
         top: -33%;
         left: 2.5%;
         top: -270px;
         left: 38px;
+        animation: anime_parts03 20s linear infinite;
       }
 
       &__parts04 {
@@ -80,6 +172,7 @@
         top: 10px;
         right: 136px;
         z-index: 1;
+        animation: anime_parts04 20s linear 2s infinite;
       }
 
       &__parts05 {
@@ -87,12 +180,14 @@
         right: -10%;
         top: 142px;
         right: -144px;
+        animation: anime_parts05 25s linear infinite;
       }
       &__parts06 {
         bottom: -34%;
         right: 14%;
         bottom: -278px;
         right: 198px;
+        animation: anime_parts06 20s ease 1s infinite;
       }
     }
   }
