--- a/scss/02_layouts/_l-main.scss
+++ b/scss/02_layouts/_l-main.scss
@@ -36,7 +36,7 @@
   }
 
   60% {
-    transform: translate(40px, 20px);
+    transform: translate(60px, 20px);
   }
 
   100% {
@@ -49,7 +49,7 @@
   }
 
   50% {
-    transform: translateY(20px);
+    transform: translateY(50px);
   }
 
   100% {
@@ -61,12 +61,8 @@
     transform: rotate(0deg);
   }
 
-  50% {
-    transform: rotate(30deg);
-  }
-
   100% {
-    transform: rotate(0deg);
+    transform: rotate(360deg);
   }
 }
 @keyframes anime_parts04 {
@@ -88,11 +84,11 @@
   }
 
   30% {
-    transform: translate(30px, 20px) rotate(10deg);
+    transform: translate(30px, 20px) rotate(-20deg);
   }
 
   60% {
-    transform: translate(20px, -20px) rotate(20deg);
+    transform: translate(-70px, 40px) rotate(-40deg);
   }
 
   100% {
@@ -105,7 +101,7 @@
   }
 
   50% {
-    transform: rotate(30deg);
+    transform: rotate(40deg);
   }
 
   100% {
@@ -149,21 +145,21 @@
         left: -10%;
         bottom: -358px;
         left: -145px;
-        animation: anime_parts01 20s linear 1s infinite;
+        animation: anime_parts01 15s linear 1s infinite;
       }
       &__parts02 {
         top: -7%;
         left: -6%;
         top: -56px;
         left: -84px;
-        animation: anime_parts02 12s linear infinite;
+        animation: anime_parts02 7s linear infinite;
       }
       &__parts03 {
         top: -33%;
         left: 2.5%;
         top: -270px;
         left: 38px;
-        animation: anime_parts03 20s linear infinite;
+        animation: anime_parts03 30s linear infinite;
       }
 
       &__parts04 {
@@ -172,7 +168,7 @@
         top: 10px;
         right: 136px;
         z-index: 1;
-        animation: anime_parts04 20s linear 2s infinite;
+        animation: anime_parts04 15s linear 2s infinite;
       }
 
       &__parts05 {
@@ -180,14 +176,14 @@
         right: -10%;
         top: 142px;
         right: -144px;
-        animation: anime_parts05 25s linear infinite;
+        animation: anime_parts05 20s ease-in-out infinite;
       }
       &__parts06 {
         bottom: -34%;
         right: 14%;
         bottom: -278px;
-        right: 198px;
-        animation: anime_parts06 20s ease 1s infinite;
+        right: 400px;
+        animation: anime_parts06 10s ease-in-out 1s infinite;
       }
     }
   }
