--- a/scss/02_layouts/_l-main.scss
+++ b/scss/02_layouts/_l-main.scss
@@ -296,7 +296,7 @@
     justify-content: space-between;
   }
   & .l-L06 {
-    padding-bottom: 104px;
+    padding-bottom: 144px;
   }
   & .l-L07 {
     display: flex;
@@ -308,6 +308,7 @@
   }
   & .l-L12 {
     width: 48%;
+    padding-top: 14px;
   }
   & .l-L09 {
     display: flex;
