--- a/css/style.css
+++ b/css/style.css
@@ -428,10 +428,10 @@ Layout
     transform: translate(0px, 0px) rotate(0deg);
   }
   50% {
-    transform: translate(-80px, -30px) rotate(20deg);
+    transform: translate(-400px, 30px) rotate(180deg);
   }
   100% {
-    transform: translate(0px, 0px) rotate(0deg);
+    transform: translate(0px, 0px) rotate(360deg);
   }
 }
 @keyframes anime_parts04 {
@@ -439,60 +439,54 @@ Layout
     transform: translate(0px, 0px) rotate(0deg);
   }
   50% {
-    transform: translate(-80px, -30px) rotate(20deg);
+    transform: translate(-400px, 30px) rotate(180deg);
   }
   100% {
-    transform: translate(0px, 0px) rotate(0deg);
+    transform: translate(0px, 0px) rotate(360deg);
   }
 }
 @-webkit-keyframes anime_parts05 {
   0% {
     transform: translate(0px, 0px) rotate(0);
   }
-  30% {
-    transform: translate(30px, 20px) rotate(-20deg);
-  }
-  60% {
-    transform: translate(-70px, 40px) rotate(-40deg);
+  50% {
+    transform: translateY(180px) rotate(90deg);
   }
   100% {
-    transform: translate(0px, 0px) rotate(0);
+    transform: translate(0px, 0px) rotate(180deg);
   }
 }
 @keyframes anime_parts05 {
   0% {
     transform: translate(0px, 0px) rotate(0);
   }
-  30% {
-    transform: translate(30px, 20px) rotate(-20deg);
-  }
-  60% {
-    transform: translate(-70px, 40px) rotate(-40deg);
+  50% {
+    transform: translateY(180px) rotate(90deg);
   }
   100% {
-    transform: translate(0px, 0px) rotate(0);
+    transform: translate(0px, 0px) rotate(180deg);
   }
 }
 @-webkit-keyframes anime_parts06 {
   0% {
-    transform: rotate(0deg);
+    transform: translate(0px, 0px) rotate(0deg);
   }
   50% {
-    transform: rotate(40deg);
+    transform: translate(-100px, -150px) rotate(-180deg);
   }
   100% {
-    transform: rotate(0deg);
+    transform: translate(0px, 0px) rotate(-360deg);
   }
 }
 @keyframes anime_parts06 {
   0% {
-    transform: rotate(0deg);
+    transform: translate(0px, 0px) rotate(0deg);
   }
   50% {
-    transform: rotate(40deg);
+    transform: translate(-100px, -150px) rotate(-180deg);
   }
   100% {
-    transform: rotate(0deg);
+    transform: translate(0px, 0px) rotate(-360deg);
   }
 }
 .s-hero.l-S01 {
@@ -533,8 +527,8 @@ Layout
   left: -6%;
   top: -56px;
   left: -84px;
-  -webkit-animation: anime_parts02 7s linear infinite;
-          animation: anime_parts02 7s linear infinite;
+  -webkit-animation: anime_parts02 10s linear infinite;
+          animation: anime_parts02 10s linear infinite;
 }
 .s-hero .l-L03 .b-hero__parts03 {
   top: -33%;
@@ -550,24 +544,24 @@ Layout
   top: 10px;
   right: 136px;
   z-index: 1;
-  -webkit-animation: anime_parts04 15s linear 2s infinite;
-          animation: anime_parts04 15s linear 2s infinite;
+  -webkit-animation: anime_parts04 80s linear 2s infinite;
+          animation: anime_parts04 80s linear 2s infinite;
 }
 .s-hero .l-L03 .b-hero__parts05 {
   top: 17%;
   right: -10%;
   top: 142px;
   right: -144px;
-  -webkit-animation: anime_parts05 20s ease-in-out infinite;
-          animation: anime_parts05 20s ease-in-out infinite;
+  -webkit-animation: anime_parts05 40s linear infinite;
+          animation: anime_parts05 40s linear infinite;
 }
 .s-hero .l-L03 .b-hero__parts06 {
   bottom: -34%;
   right: 14%;
   bottom: -278px;
   right: 400px;
-  -webkit-animation: anime_parts06 10s ease-in-out 1s infinite;
-          animation: anime_parts06 10s ease-in-out 1s infinite;
+  -webkit-animation: anime_parts06 60s linear 1s infinite;
+          animation: anime_parts06 60s linear 1s infinite;
 }
 
 /*
