--- a/scss/04_blocks/_b-parts.scss
+++ b/scss/04_blocks/_b-parts.scss
@@ -304,7 +304,7 @@
 .m-creatorCranks {
   & .b-creatorContents__link {
     position: relative;
-    padding: 0 32px 0 24px;
+    margin: 0 32px 0 24px;
     border-bottom: 1px solid $whiteColor;
     &::before,
     &::after {
@@ -315,14 +315,14 @@
       margin: auto 0;
     }
     &::before {
-      left: 0;
+      left: -24px;
       width: 16px;
       height: 16px;
       border-radius: 50%;
       background-color: $pinkColor;
     }
     &::after {
-      right: 0;
+      right: -32px;
       background-image: url(../../img/mdi_external-link.png);
       background-repeat: no-repeat;
       background-size: contain;
