--- a/scss/02_layouts/_l-footer.scss
+++ b/scss/02_layouts/_l-footer.scss
@@ -64,7 +64,7 @@
       & .b-nav__item {
         & a {
           display: inline-block;
-          padding: 20px 0;
+          padding: 20px 0 4px;
         }
       }
     }
