--- a/scss/02_layouts/_l-footer.scss
+++ b/scss/02_layouts/_l-footer.scss
@@ -7,12 +7,11 @@
     position: sticky;
     left: 0px;
     bottom: 0px;
-    height: 1200px;
     background-color: $textColor;
     z-index: -1;
   }
   & .l-S03 {
-    padding: 376px 0 104px 0;
+    padding: 104px 0;
     height: auto;
   }
   & .l-L02 {
