--- a/css/style.css
+++ b/css/style.css
@@ -182,12 +182,12 @@ Layout
 .container {
   width: 100%;
   height: 100%;
-  overflow: hidden;
 }
 
 .contents {
   width: 100%;
   height: 100%;
+  overflow: hidden;
 }
 
 .l-S01,
@@ -835,12 +835,11 @@ Layout
   position: sticky;
   left: 0px;
   bottom: 0px;
-  height: 1200px;
   background-color: #242422;
   z-index: -1;
 }
 .footer .l-S03 {
-  padding: 376px 0 104px 0;
+  padding: 104px 0;
   height: auto;
 }
 .footer .l-L02 {
@@ -1131,7 +1130,7 @@ hamburger
   }
   .m-headerNav__box .b-nav__item a {
     display: inline-block;
-    padding: 20px 0 0;
+    padding: 20px 0 4px;
   }
 }
 /* Accesibility */
