--- a/scss/04_blocks/_b-hamburger.scss
+++ b/scss/04_blocks/_b-hamburger.scss
@@ -155,7 +155,7 @@ hamburger
     & .b-nav__item {
       & a {
         display: inline-block;
-        padding: 20px 0 0;
+        padding: 20px 0 4px;
       }
     }
   }
