--- a/scss/02_layouts/_l-footer.scss
+++ b/scss/02_layouts/_l-footer.scss
@@ -46,19 +46,20 @@
   }
   & .l-L04 {
     width: 90%;
-    max-width: 1320px;
     margin: 0 auto;
     display: flex;
-    align-items: center;
+    align-items: flex-end;
     justify-content: space-between;
     gap: 0 24px;
   }
   & .l-L06 {
     .m-footerNav__box {
       display: flex;
-      flex-direction: row;
-      align-items: center;
-      justify-content: flex-end;
+      flex-direction: column;
+      flex-wrap: wrap;
+      align-items: flex-start;
+      justify-content: flex-start;
+      height: 200px;
       gap: 0 24px;
       & .b-nav__item {
         & a {
@@ -74,7 +75,7 @@
   }
 }
 
-@media screen and (max-height: 850px) {
+@include mq(l) {
   .footer {
     &.sitefooter {
       position: static;
@@ -82,6 +83,27 @@
     }
     & .l-S03 {
       padding: 104px 0;
+    }
+    & .l-L04 {
+      width: 90%;
+      max-width: 1320px;
+      align-items: center;
+      gap: 0 24px;
+    }
+    & .l-L06 {
+      .m-footerNav__box {
+        flex-direction: row;
+        flex-wrap: nowrap;
+        align-items: center;
+        justify-content: flex-end;
+        gap: 0 24px;
+        & .b-nav__item {
+          & a {
+            display: inline-block;
+            padding: 20px 0 4px;
+          }
+        }
+      }
     }
   }
 }
